tests/valid/root-metadata-aerospace.hcdf
<?xml version="1.0"?>
<!-- Valid: aerospace convention (FRD body, NED world) -->
<hcdf version="1.0" name="aerospace-drone" body-frame="FRD" world-frame="NED">
  <description>Fixed-wing drone using aerospace frame conventions</description>
  <author>Test Aerospace Corp</author>
  <license>BSD-3-Clause</license>
  <comp name="fuselage" role="parent" struct-type="fuselage"/>
</hcdf>
